fix margin bottom spacing for popup menu header

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -88,7 +88,7 @@
 
     &__header {
       margin-top: 26px;
-      margin-bottom: 7px;
+      margin-bottom: 17px;
     }
 
     &__header-text {
